--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "name": "tutortrack-pro",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "mongodb": "^6.3.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "lucide-react": "^0.473.0",
     "recharts": "^2.15.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.7"
   }
 }
