--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 
 {
-  "name": "tutortrack-pro",
+  "name": "tutortrack-pro-next",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.473.0",
     "recharts": "^2.15.0",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.7"
+    "typescript": "^5.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1"
   }
 }
