feat: Refactor and rename project to tutortrack-pro-fullstack
This commit refactors the project structure and renames the package to `tutortrack-pro-fullstack` to better reflect its nature.
It also removes a redundant entry point file (`index.tsx`), updates API error messages to be more specific, and consolidates MongoDB connection logic into a shared `lib/mongodb.ts` file, improving code organization and maintainability.

The core functionality of data fetching and synchronization remains intact.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "tutortrack-pro-next",
+  "name": "tutortrack-pro-fullstack",
   "version": "1.0.0",
   "private": true,
   "scripts": {
