refactor: Migrate DB connection and clean up legacy code
Replaces the old `lib/db.ts` with a more robust `lib/mongodb.ts` for improved connection pooling and error handling. Updates API routes (`students.ts`, `schedules.ts`) to import from the new MongoDB utility. Removes the redundant `api/lib/db.ts`. Adjusts `tsconfig.json` to exclude the now-obsolete `api/*.ts` files. Adds improved error handling and UI feedback for database connection issues in `app/page.tsx`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,18 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "vite.config.ts", "index.tsx", "App.tsx", "api/*.ts"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "vite.config.ts",
+    "index.tsx",
+    "App.tsx",
+    "api/*.ts",
+    "index.html"
+  ]
 }
